--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -26,7 +26,7 @@ section {
 }
 
 ::selection {
-  background: color-mix(in srgb, var(--tertiary) 60%, rgba(255, 255, 255, 0));
+  background: var(--selection);
   color: var(--darkgray);
 }
 
@@ -79,6 +79,7 @@ a {
       border-radius: 0;
       padding: 0;
     }
+
     &.tag-link {
       &::before {
         content: "#";
@@ -90,7 +91,7 @@ a {
     height: 1ex;
     margin: 0 0.15em;
 
-    > path {
+    >path {
       fill: var(--dark);
     }
   }
@@ -98,6 +99,7 @@ a {
 
 .desktop-only {
   display: initial;
+
   @media all and (max-width: $fullPageWidth) {
     display: none;
   }
@@ -105,6 +107,7 @@ a {
 
 .mobile-only {
   display: none;
+
   @media all and (max-width: $fullPageWidth) {
     display: initial;
   }
@@ -118,7 +121,7 @@ a {
   }
 
   & article {
-    & > h1 {
+    &>h1 {
       font-size: 2rem;
     }
 
@@ -133,19 +136,20 @@ a {
       color: var(--gray);
     }
 
-    & li > * {
+    & li>* {
       margin-top: 0;
       margin-bottom: 0;
     }
 
-    p > strong {
+    p>strong {
       color: var(--dark);
     }
   }
 
-  & > #quartz-body {
+  &>#quartz-body {
     width: 100%;
     display: flex;
+
     @media all and (max-width: $fullPageWidth) {
       flex-direction: column;
     }
@@ -161,6 +165,7 @@ a {
       box-sizing: border-box;
       padding: 0 4rem;
       position: fixed;
+
       @media all and (max-width: $fullPageWidth) {
         position: initial;
         flex-direction: row;
@@ -172,6 +177,7 @@ a {
 
     & .sidebar.left {
       left: calc(calc(100vw - $pageWidth) / 2 - $sidePanelWidth);
+
       @media all and (max-width: $fullPageWidth) {
         gap: 0;
         align-items: center;
@@ -181,7 +187,8 @@ a {
     & .sidebar.right {
       right: calc(calc(100vw - $pageWidth) / 2 - $sidePanelWidth);
       flex-wrap: wrap;
-      & > * {
+
+      &>* {
         @media all and (max-width: $fullPageWidth) {
           flex: 1;
           min-width: 140px;
@@ -193,6 +200,7 @@ a {
   & .page-header {
     width: $pageWidth;
     margin: $topSpacing auto 0 auto;
+
     @media all and (max-width: $fullPageWidth) {
       width: initial;
       margin-top: 2rem;
@@ -204,6 +212,7 @@ a {
     margin-left: auto;
     margin-right: auto;
     width: $pageWidth;
+
     @media all and (max-width: $fullPageWidth) {
       width: initial;
       margin-left: 0;
@@ -268,7 +277,7 @@ thead {
   font-weight: revert;
   margin-bottom: 0;
 
-  article > & > a[role="anchor"] {
+  article>&>a[role="anchor"] {
     color: var(--dark);
     background-color: transparent;
   }
@@ -280,7 +289,7 @@ h3,
 h4,
 h5,
 h6 {
-  &[id] > a[href^="#"] {
+  &[id]>a[href^="#"] {
     margin: 0 0.5rem;
     opacity: 0;
     transition: opacity 0.2s ease;
@@ -289,7 +298,7 @@ h6 {
     user-select: none;
   }
 
-  &[id]:hover > a {
+  &[id]:hover>a {
     opacity: 1;
   }
 }
@@ -327,7 +336,7 @@ figure[data-rehype-pretty-code-figure] {
   line-height: 1.6rem;
   position: relative;
 
-  & > [data-rehype-pretty-code-title] {
+  &>[data-rehype-pretty-code-title] {
     font-family: var(--codeFont);
     font-size: 0.9rem;
     padding: 0.1rem 0.5rem;
@@ -338,7 +347,7 @@ figure[data-rehype-pretty-code-figure] {
     color: var(--darkgray);
   }
 
-  & > pre {
+  &>pre {
     padding: 0;
   }
 }
@@ -355,7 +364,7 @@ pre {
     border: none;
   }
 
-  & > code {
+  &>code {
     background: none;
     padding: 0;
     font-size: 0.85rem;
@@ -370,7 +379,7 @@ pre {
       border-radius: 5px;
     }
 
-    & > [data-line] {
+    &>[data-line] {
       padding: 0 0.25rem;
       box-sizing: border-box;
       border-left: 3px solid transparent;
@@ -391,11 +400,11 @@ pre {
       }
     }
 
-    &[data-line-numbers-max-digits="2"] > [data-line]::before {
+    &[data-line-numbers-max-digits="2"]>[data-line]::before {
       width: 2rem;
     }
 
-    &[data-line-numbers-max-digits="3"] > [data-line]::before {
+    &[data-line-numbers-max-digits="3"]>[data-line]::before {
       width: 3rem;
     }
   }
@@ -419,7 +428,7 @@ p {
 .table-container {
   overflow-x: auto;
 
-  & > table {
+  &>table {
     margin: 1rem;
     padding: 1.5rem;
     border-collapse: collapse;
@@ -429,7 +438,7 @@ p {
       min-width: 75px;
     }
 
-    & > * {
+    &>* {
       line-height: 2rem;
     }
   }
@@ -447,6 +456,7 @@ td {
 
 tr {
   border-bottom: 1px solid var(--lightgray);
+
   &:last-child {
     border-bottom: none;
   }
@@ -458,7 +468,7 @@ img {
   margin: 1rem 0;
 }
 
-p > img + em {
+p>img+em {
   display: block;
   transform: translateY(-1rem);
 }
@@ -490,7 +500,7 @@ ol.overflow {
   content: "";
   clear: both;
 
-  & > li:last-of-type {
+  &>li:last-of-type {
     margin-bottom: 30px;
   }
 
